add initial header components and styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,8 +105,9 @@
   }
 
   /* Home */
+  
   .home {
-    @apply no-scrollbar flex w-full flex-row max-xl:max-h-screen max-xl:overflow-y-scroll;
+    @apply bg-black text-white no-scrollbar flex w-full flex-row max-xl:max-h-screen max-xl:overflow-y-scroll;
   }
 
   .home-content {
