--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+html, body {
+  background-color: black;
+  color: white;
+}
+p, h1, h2, h3, h4, h5, h6, span, a, div, li, dt, dd{
+  color: inherit;
+}
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
@@ -107,7 +114,7 @@
   /* Home */
   
   .home {
-    @apply bg-black text-white no-scrollbar flex w-full flex-row max-xl:max-h-screen max-xl:overflow-y-scroll;
+    @apply no-scrollbar flex w-full flex-row max-xl:max-h-screen max-xl:overflow-y-scroll;
   }
 
   .home-content {
@@ -119,7 +126,7 @@
   }
 
   .total-balance {
-    @apply flex w-full items-center gap-4 rounded-xl border border-gray-200 p-4 shadow-chart sm:gap-6 sm:p-6;
+    @apply flex w-full items-center gap-4 rounded-xl border border-gray-500 p-4 shadow-chart sm:gap-6 sm:p-6;
   }
 
   .total-balance-chart {
@@ -218,7 +225,7 @@
   }
 
   .header-box-subtext {
-    @apply text-14 lg:text-16 font-normal text-gray-600;
+    @apply text-14 lg:text-16 font-normal text-gray-500;
   }
 
   /* Bank Card */
