--- a/app/globals.css
+++ b/app/globals.css
@@ -373,11 +373,11 @@ p, h1, h2, h3, h4, h5, h6, span, a, div, li, dt, dd{
 
   /* Sidebar */
   .sidebar {
-    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-200 bg-white pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
+    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-25 bg-black pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
   }
 
   .sidebar-logo {
-    @apply 2xl:text-26 font-ibm-plex-serif text-[26px] font-bold text-black-1 max-xl:hidden;
+    @apply 2xl:text-26 font-inter text-[26px] font-bold text-gray-600 max-xl:hidden;
   }
 
   .sidebar-link {
@@ -385,6 +385,6 @@ p, h1, h2, h3, h4, h5, h6, span, a, div, li, dt, dd{
   }
 
   .sidebar-label {
-    @apply text-16 font-semibold text-black-2 max-xl:hidden;
+    @apply text-16 font-semibold text-gray-25 max-xl:hidden;
   }
 }
