--- a/app/globals.css
+++ b/app/globals.css
@@ -373,7 +373,7 @@ p, h1, h2, h3, h4, h5, h6, span, a, div, li, dt, dd{
 
   /* Sidebar */
   .sidebar {
-    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-25 bg-black pt-8 text-white max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
+    @apply sticky left-0 top-0 flex h-screen w-fit flex-col  justify-between border-r border-gray-500 bg-black pt-8 text-gray-300 max-md:hidden sm:p-4 xl:p-6 2xl:w-[355px];
   }
 
   .sidebar-logo {
