implement signUp signIn and authentication with zod

--- a/app/globals.css
+++ b/app/globals.css
@@ -314,11 +314,11 @@ html, body {
   }
 
   .form-btn {
-    @apply text-16 rounded-lg border border-bankGradient bg-bank-gradient font-semibold text-white shadow-form;
+    @apply text-16 rounded-lg border border-gray-900 bg-black-1 font-semibold text-white shadow-form;
   }
 
   .form-link {
-    @apply text-14 cursor-pointer font-medium text-bankGradient;
+    @apply text-14 cursor-pointer font-medium text-blue-600;
   }
 
   /* Payment Transfer */
