add transactions ui and fetch trsansactions data from plaid

--- a/app/globals.css
+++ b/app/globals.css
@@ -212,7 +212,7 @@ html, body {
 
   /* My Banks */
   .transactions {
-    @apply flex max-h-screen w-full flex-col gap-8 overflow-y-scroll bg-gray-25 p-8 xl:py-12;
+    @apply flex max-h-screen w-full flex-col gap-8 overflow-y-scroll bg-black-1 p-8 xl:py-12;
   }
 
   .transactions-header {
@@ -224,7 +224,7 @@ html, body {
   }
 
   .transactions-account-balance {
-    @apply flex-center flex-col  gap-2 rounded-md bg-blue-25/20 px-4 py-2 text-white;
+    @apply flex-center flex-col  gap-2 rounded-md bg-blue-200 px-4 py-2 text-white;
   }
 
   .header-box {
@@ -257,7 +257,7 @@ html, body {
 
   /* Bank Info */
   .bank-info {
-    @apply gap-[18px] flex p-4 transition-all border bg-blue-25 border-transparent;
+    @apply gap-[18px] flex p-4 transition-all border bg-blue-200 border-transparent;
   }
 
   /* Category Badge */
